2020-05-15  Tim Rühsen  <tim.ruehsen@gmx.de>

	* cfg.mk: New syntax rule sc_rockdabootism_missing_space.
	* common/pk-utils.c (pk_print_binary): Add missing space before
	opening bracket.
	* common/pk-utils.h (pk_str_concat): Likewise.
	* libpoke/ios.c (ios_read_int_common): Likewise.
	(ios_read_int). Likewise.
	* libpoke/pvm-val.c (pvm_print_val_1): Likewise.
	* poke/pk-cmd-set.c (pk_cmd_set_odepth): Likewise.
	(pk_cmd_set_oindent): Likewise.
	(pk_cmd_set_omode): Likewise.
	* poke/pk-hserver.c (pk_hserver_make_hyperlink): Likewise.
	* poke/pk-mi.c (pk_mi_fd_set_nonblocking): Likewise.
	(pk_mi_fd_restore_blocking): Likewise.
	* poke/pk-repl.c (poke_sigint_handler): Likewise.
	(pk_repl): Likewise.
	* libpoke/pkl-lex.l: Likewise.
	* poke/pk-map-lex.l: Likewise.
	* poke/poke.c: Slightly amend comment.

2020-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf.pk (Elf64): New type.
	* maps/elf.map: Rewritten to use Elf64.

2020-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map-tab.y (pk_map_parse_file): Fix call to
	pk_map_tab_set_extra.

2020-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (iosize): Argument defaults to the current
	IOS.
	* poke/pk-cmd.c (pk_cmd_exec): Use new interface of
	pk_compile_statement.
	* .x-sc_space_tab: Add poke/pk-map-tab.y and poke/pk-map-lex.l.
	* poke/pk-term.h (pk_vprintf): Define.
	* poke/pk-term.c (pk_vprintf): Likewise.
	* poke/Makefile.am (AM_YFLAGS): Define.
	(AM_LFLAGS): Likewise.
	(EXTRA_DIST): Likewise.
	(BUILT_SOURCES): Likewise.
	* poke/pk-map-lex.l: Likewise.
	* poke/Makefile.am (poke_SOURCES): Add pk-map-parser.h and
	pk-map-tab.y.
	* maps/elf.map: Adapted to use %-directives.
	* maps/mp3.map: Likewise.
	* etc/poke-map-mode.el (poke-map-mode): Highlight %-directives
	entries.
	* poke/pk-map.c (pk_map_load_file): Define.
	* poke/pk-map-tab.y: New file.
	* poke/pk-map-parser.h: Likewise.

2020-05-14  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libpoke/ios.c: Remove include xalloc.h.