@@ -1,3 +1,10 @@
+2020-05-15  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/pk-map.h: Document in the docstring of the function
+	pk_map_load_file that ERRMSG can be set to NULL even if an error
+	code is returned.
+	* poke/pk-cmd-map.c (pk_cmd_map_load): Adapt accordingly.
+
 2020-05-15  Tim Rühsen  <tim.ruehsen@gmx.de>
 
 	* cfg.mk: New syntax rule sc_rockdabootism_missing_space.
